fixed spacing between glow buttons

--- a/src/App.css
+++ b/src/App.css
@@ -180,6 +180,10 @@ a.nav-link {
   background-color: #242424;
 }
 
+#glow-button-search {
+  margin-right: 90px;
+}
+
 .glow-on-hover {
   width: 220px;
   height: 50px;
